# sqlalchemy

./: .gitignore  .pylintrc  pyproject.toml
src/: config.py  database.py  dto.ipynb  main.py  models.py  schemas.py
src/queries/: core.py  orm.py
