[tool.poetry]
name = "orm"
version = "0.1.0"
description = ""
authors = ["kbuhantsev <k.buhantsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
sqlalchemy = "^2.0.25"
psycopg = "^3.1.17"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
psycopg-binary = "^3.1.17"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
